<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">市政通</string>
    <string name="app_title_name">市政通</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <!-- XListView -->
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">释放刷新数据</string>
    <string name="xlistview_header_hint_loading">加载中&#8230;</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">释放载入更多</string>
    <string name="mine_login_hine1">请输入账号</string>
    <string name="mine_login_hine2">密码</string>
    <string name="mine_login_login">登&#160;&#160;&#160;&#160;录</string>
    <string name="mine_login_loginning">登录中</string>
    <string name="notice_title">通知公告</string>
    <string name="device_manager">设备管理</string>
    <string name="device_manager_more">了解更多设备管理信息</string>
    <string name="materiel_manager">物资管理</string>
    <string name="materiel_manager_more">了解更多物料管理信息</string>
    <string name="video_manager">视频管理</string>
    <string name="road_manager">道路挖占</string>
    <string name="road_manager_more">了解更多道路挖占信息</string>
    <string name="patrol_manaber">巡视系统</string>
    <string name="splash_adv_logo">Copyright © 1993&#8211;2016\n西安翔迅科技有限责任公司版权所有</string>
    <string name="trade_n"><![CDATA[<font color="#666666">待办需求数量: </font><font color="#df3939">%1$s</font>]]></string>
    <string name="loading">正在加载..</string>
    <string name="nodata">暂无数据！</string>

    <string-array name="tab_names">
        <item>项目统计</item>
        <item>施工进度/类别统计</item>
    </string-array>
    <string-array name="video_tab_names">
        <item>列表信息</item>
        <item>地图显示</item>
    </string-array>

    <string name="nitice_user">发布人: %1$s</string>
    <string name="nitice_date">发布日期: %1$s</string>
    <string name="search_hint">输入关键字搜索</string>
    <string name="search_btn">搜索</string>
    <string name="search_key_null">关键字为空,请重新输入！</string>
    <string name="search_nofind">查无此人！</string>
    <string name="login">正在登录</string>
    <string name="logout">退出</string>
    <string name="file_play_back">按文件回放</string>
    <string name="choose_start_time">选择开始时间</string>
    <string name="choose_end_time">选择关闭时间</string>
    <string name="time_play_back">按时间回放</string>
    <string name="close_play_back">关闭回放</string>
    <string name="str_capture_bitmap">抓图</string>
    <string name="btn_ok">完成(0)</string>
    <string name="dialog_but1">取消</string>
    <string name="description_hint">5~400字</string>
    <string name="picture_detail_title">查看图片</string>
    <string name="taking_pictures">拍照</string>
    <string name="photo_albums_select">从相册选取</string>
    <string name="city_location_fail">定位失败,请点击重试</string>
    <string name="home_word">字</string>
    <string name="have_input">已输入</string>
    <string name="clean_all_content">" 清空所有"</string>
    <string name="input_hint_content">请输入详细描述内容，5~400字</string>
    <string name="dialog_title">确认删除</string>
    <string name="dialog_but2">确定</string>
    <string name="supplier_contact">联系人: %1$s</string>
    <string name="supplier_product">产品: %1$s</string>
    <string name="contract_man">经&#160;&#160;办&#160;&#160;人: </string>
    <string name="official_man">负&#160;&#160;责&#160;&#160;人: </string>
    <string name="official_principal">联&#160;&#160;系&#160;&#160;人:</string>
    <string name="project_area">辖&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;区:</string>
    <string name="project_manage">经&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;理:</string>
    <string name="occupy_w">挖&#160;&#160;面&#160;&#160;积:</string>
    <string name="occupy_z">占&#160;&#160;面&#160;&#160;积:</string>
    <string name="project_remark">备&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;注:</string>
    <string name="more_update">检查更新</string>
    <string name="more_clear_cache">清空缓存</string>
    <string name="curr_ver">当前版本号：V</string>
    <string name="updating">检查更新中</string>
    <string name="more_exit">退出</string>
    <string name="exit_login">确认退出登录？</string>
    <string name="no_clear">无需清除</string>
    <string name="clear_com">确认清空缓存？</string>
    <string name="cache_realy_cleat">缓存已经清除</string>
    <string name="latest_version_please_look">当前已为最新版本，敬请期待</string>
    <string name="update_tips_html"><![CDATA[<b>升级提示</b>]]></string>
    <string name="textView_title">发现新版本</string>
    <string name="upload_code">1.0</string>
    <string name="btn_update">现在升级</string>
    <string name="btn_cancle">稍后再说</string>
    <string name="upload_installation_package">正在下载安装包&#8230;</string>
    <string name="trade_count"><![CDATA[<font color="#333333">合计: </font><font color="#df3939">%1$s</font>]]></string>
    <string name="trade_start"><![CDATA[<font color="#333333">已开工: </font><font color="#df3939">%1$s</font>]]></string>
    <string name="trade_weihu"><![CDATA[<font color="#333333">已维护: </font><font color="#df3939">%1$s</font>]]></string>
    <string name="trade_yanqi"><![CDATA[<font color="#333333">已超期: </font><font color="#df3939">%1$s</font>]]></string>
    <string name="image_type"><![CDATA[<font color="#333333">图片类型: </font><font color="#df3939">%1$s</font>]]></string>
    <string name="operator_name"><![CDATA[<font color="#333333">操作人员: </font><font color="#df3939">%1$s</font>]]></string>
    <string name="upload_time"><![CDATA[<font color="#333333">上传时间: </font><font color="#df3939">%1$s</font>]]></string>
    <string name="networkerror">网络异常,请稍后重试!</string>
    <string name="location_name">姓名: %1$s</string>
    <string name="location_tel">电话: %1$s</string>
    <string name="location_org">单位: %1$s</string>
    <string name="location_time">定位时间: %1$s</string>
    <string name="location_address">定位地址: %1$s</string>
    <string name="order_man">承&#160;&#160;接&#160;&#160;人</string>
    <string name="operator">操&#160;&#160;作&#160;&#160;员:</string>
    <string name="operator_line">操&#160;&#160;作&#160;&#160;员:  </string>
    <string name="user_name">姓&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;名:</string>
    <string name="org_name">单&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;位:</string>
    <string name="delay_remark">备&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;注:</string>

</resources>