<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#00ffffff"
    android:orientation="vertical"
    android:padding="@dimen/margin_padding5" >

    <TextView
        android:id="@+id/tv_image_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/margin_padding5"
        android:text="@string/image_type"
        android:textSize="@dimen/textSize10" />

    <TextView
        android:id="@+id/tv_operator_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/operator_name"
        android:textSize="@dimen/textSize10" />

    <TextView
        android:id="@+id/tv_upload_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upload_time"
        android:textSize="@dimen/textSize10" />

</LinearLayout>