<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <ListView
            android:id="@+id/xlistview"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:divider="@null"
            android:dividerHeight="2.0dp"
            android:listSelector="@color/transparent_white"
            android:padding="@dimen/margin_padding5"
            android:scrollbars="@null" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="#87CEFA"
            android:orientation="horizontal"
            android:padding="@dimen/margin_padding5" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:singleLine="true"
                android:text="@string/trade_count"
                android:textColor="@color/red"
                android:textSize="@dimen/textSize14" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:singleLine="true"
                android:text="@string/trade_start"
                android:textColor="@color/red"
                android:textSize="@dimen/textSize14" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:singleLine="true"
                android:text="@string/trade_weihu"
                android:textColor="@color/red"
                android:textSize="@dimen/textSize14" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:singleLine="true"
                android:text="@string/trade_yanqi"
                android:textColor="@color/red"
                android:textSize="@dimen/textSize14" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>