<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <com.xiangxun.xacity.view.TitleView
        android:id="@id/comment_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:id="@+id/item_detail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical" >

        <LinearLayout
            android:id="@+id/main_fragment_playback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <SurfaceView
                android:id="@+id/sv_player"
                android:layout_width="match_parent"
                android:layout_height="272dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp" />

            <com.xiangxun.xacity.view.RemotePortaitControlBar
                android:id="@+id/portait_control"
                android:layout_width="match_parent"
                android:layout_height="128dip"
                android:layout_marginTop="10dp"
                android:background="@color/gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/bt_playback_by_file"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:text="@string/file_play_back" />

                <Button
                    android:id="@+id/bt_playback_by_time"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:text="@string/time_play_back" />

                <Button
                    android:id="@+id/bt_close_playback"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:text="@string/close_play_back" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/choose_start_time_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="开始时间：" />

                <TextView
                    android:id="@+id/choose_start_time_txt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:singleLine="true"
                    android:text="@string/choose_start_time" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/choose_end_time_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="结束时间：" />

                <TextView
                    android:id="@+id/choose_end_time_txt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:singleLine="true"
                    android:text="@string/choose_end_time" />
            </LinearLayout>

            <Button
                android:id="@+id/capture_bitmap"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/str_capture_bitmap"
                android:visibility="gone" />

            <Button
                android:id="@+id/bt_query_video"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="查询录像" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>