<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/color_b0000000"
    android:gravity="bottom"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tv_add_picture_from_camera"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/view_height40"
            android:background="@drawable/publish_click_selector"
            android:gravity="center"
            android:text="@string/taking_pictures"
            android:textColor="@color/color333333"
            android:textSize="@dimen/textSize15" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/full_line" />

        <TextView
            android:id="@+id/tv_add_picture_from_album"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/view_height40"
            android:background="@drawable/publish_click_selector"
            android:gravity="center"
            android:text="@string/photo_albums_select"
            android:textColor="@color/color333333"
            android:textSize="@dimen/textSize15" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/full_line" />

        <TextView
            android:id="@+id/tv_add_picture_cancle"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/view_height40"
            android:background="@drawable/publish_click_selector"
            android:gravity="center"
            android:text="@string/dialog_but1"
            android:textColor="@color/color999999"
            android:textSize="@dimen/textSize15" />
    </LinearLayout>

</LinearLayout>