<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <com.xiangxun.xacity.view.TitleView
        android:id="@id/comment_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <View
        style="@style/full_line_seperator"
        android:layout_marginTop="@dimen/margin_padding15" />

    <RelativeLayout
        android:id="@+id/rl_more_clear"
        style="@style/more_relativelayout" >

        <TextView
            style="@style/more_text"
            android:text="@string/more_clear_cache" />

        <TextView
            android:id="@+id/tv_more_cache"
            style="@style/more_text2"
            android:layout_toLeftOf="@+id/more_tv_arrows"
            android:text="@string/more_clear_cache" />

        <TextView
            android:id="@+id/more_tv_arrows"
            style="@style/more_arrows" />
    </RelativeLayout>

    <View
        style="@style/full_line_seperator"
        android:layout_marginLeft="@dimen/margin_padding20" />

    <RelativeLayout
        android:id="@+id/rl_more_update"
        style="@style/more_relativelayout" >

        <TextView
            style="@style/more_text"
            android:text="@string/more_update" />

        <TextView
            android:id="@+id/tv_more_version"
            style="@style/more_text2"
            android:layout_toLeftOf="@+id/more_tv_arrows4"
            android:text="@string/more_clear_cache" />

        <TextView
            android:id="@+id/more_tv_arrows4"
            style="@style/more_arrows" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/btn_more_exit"
        style="@style/more_relativelayout" >

        <View
            style="@style/full_line_seperator"
            android:layout_marginLeft="@dimen/margin_padding5" />

        <TextView
            style="@style/more_text"
            android:text="@string/more_exit" />
    </RelativeLayout>

    <View style="@style/full_line_seperator" />

</LinearLayout>