<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/custom_call_background"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15.0dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textView_title"
                android:textColor="@color/black"
                android:textSize="@dimen/textSize17"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_padding5"
                android:text="@string/upload_code"
                android:textColor="@color/black"
                android:textSize="@dimen/textSize17"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/margin_padding10"
            android:layout_marginTop="@dimen/margin_padding10"
            android:maxHeight="300dp"
            android:paddingLeft="@dimen/margin_padding15"
            android:paddingRight="@dimen/margin_padding15"
            android:textColor="@color/color333333"
            android:textSize="@dimen/textSize15" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@color/full_line" />

    <ViewFlipper
        android:id="@+id/viewFlipper"
        android:layout_width="fill_parent"
        android:layout_height="42dp" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btcancle"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@drawable/hit_selector_left"
                android:gravity="center"
                android:text="@string/btn_cancle"
                android:textColor="@color/color333333"
                android:textSize="@dimen/textSize15" />

            <View
                android:layout_width="1px"
                android:layout_height="fill_parent"
                android:background="@color/full_line" />

            <Button
                android:id="@+id/btn_update"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@drawable/hit_selector_right"
                android:gravity="center"
                android:text="@string/btn_update"
                android:textColor="@color/color333333"
                android:textSize="@dimen/textSize15" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" >

            <ProgressBar
                android:id="@+id/progressbar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:padding="@dimen/margin_padding14" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/upload_installation_package"
                android:textColor="@color/white" />
        </RelativeLayout>
    </ViewFlipper>

</LinearLayout>