<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/frabg"
    android:orientation="vertical" >

    <com.xiangxun.xacity.view.TitleView
        android:id="@id/comment_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0.0dp"
        android:layout_margin="@dimen/margin_padding10"
        android:layout_weight="3"
        android:background="@drawable/more_feedback_input"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/edit_publish_des"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/margin_padding10"
            android:layout_weight="1"
            android:background="@color/white"
            android:ems="10"
            android:gravity="top"
            android:hint="@string/input_hint_content"
            android:textColor="@color/color333333"
            android:textSize="@dimen/textSize15" >

            <requestFocus />
        </EditText>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_padding10"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tv_publish_clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/tv_publish_count"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/margin_padding10"
                android:drawableLeft="@drawable/des_clear"
                android:gravity="center_vertical"
                android:text="@string/clean_all_content"
                android:textColor="@color/color333333"
                android:textSize="@dimen/textSize12" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/margin_padding10"
                android:text="@string/have_input"
                android:textColor="@color/color999999"
                android:textSize="@dimen/textSize12" />

            <TextView
                android:id="@+id/tv_publish_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/tv_publish_count"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/textView1"
                android:text="0"
                android:textColor="@color/pick_shop"
                android:textSize="@dimen/textSize12" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/tv_publish_count"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/tv_publish_count"
                android:text="@string/home_word"
                android:textColor="@color/color999999"
                android:textSize="@dimen/textSize12" />
        </RelativeLayout>
    </LinearLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="15dp"
        android:layout_weight="1" />

</LinearLayout>